--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>my paragraph will go here</p>
+    <p>i am thinking of making my zine about trees or something artistic, organic, and spiritual. i will come up with an abstract way of conveying my piece and my zine will feel more like an experience as opposed to an assignment. </p>
 </body>
 </html>
