--- a/index.html
+++ b/index.html
@@ -1,11 +1,98 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>zine</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Follow the White Rabbit</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: #000000;
+            font-family: 'Georgia', serif;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            width: 100%;
+            max-width: 430px; /* iPhone 16 Plus width */
+            min-height: 100vh;
+        }
+
+        .rabbit-link {
+            display: block;
+            margin-bottom: 40px;
+            transition: transform 0.3s ease;
+        }
+
+        .rabbit-link:hover {
+            transform: scale(1.05);
+        }
+
+        .rabbit-image {
+            width: 280px;
+            height: auto;
+            display: block;
+        }
+
+        .text {
+            color: #ffffff;
+            font-size: 28px;
+            font-weight: normal;
+            text-align: center;
+            letter-spacing: 1px;
+            line-height: 1.4;
+        }
+
+        /* Desktop view */
+        @media (min-width: 768px) {
+            .container {
+                max-width: 600px;
+            }
+
+            .rabbit-image {
+                width: 350px;
+            }
+
+            .text {
+                font-size: 36px;
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .container {
+                max-width: 700px;
+            }
+
+            .rabbit-image {
+                width: 400px;
+            }
+
+            .text {
+                font-size: 42px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <p>i am thinking of making my zine about trees or something artistic, organic, and spiritual. i will come up with an abstract way of conveying my piece and my zine will feel more like an experience as opposed to an assignment. </p>
+    <div class="container">
+        <a href="pathway.html" class="rabbit-link">
+            <img src="images/rabbit.png" 
+                 class="rabbit-image">
+        </a>
+        <h1 class="text">follow the white rabbit</h1>
+    </div>
 </body>
 </html>
