created more html

--- a/alice.html
+++ b/alice.html
@@ -184,7 +184,7 @@
 <body>
     <div class="container">
         <!-- Rabbit navigation button -->
-        <a href="index.html" class="rabbit-home">
+        <a href="pathway.html" class="rabbit-home">
             <img src="images/rabbit.png" 
                  alt="Home" 
                  class="rabbit-image">
