--- a/madhatter.html
+++ b/madhatter.html
@@ -35,7 +35,7 @@
         .lace-top {
             position: absolute;
             top: 0;
-            left: 0;
+            left: 100px;
             width: 100%;
             height: auto;
             z-index: 5;
@@ -52,8 +52,8 @@
             width: 280px;
             height: auto;
             display: block;
-            margin-left: -160px;
-            margin-top: 40px;
+            margin-left: -190px;
+            margin-top: -40px;
             filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.3));
         }
 
@@ -66,7 +66,8 @@
         .signs-image {
             width: 260px;
             height: auto;
-            margin-top: -0px;
+            margin-top: -240px;
+            margin-left: 150px;
             display: block;
             filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
         }
@@ -82,7 +83,7 @@
             width: 700px;
             height: auto;
             display: block;
-            margin-top: -400px;
+            margin-bottom: -70px;
             margin-left: -270px;
             filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
         }
@@ -95,7 +96,6 @@
             font-size: 20px;
             line-height: 1.8;
             letter-spacing: 0.5px;
-            margin-top: -200px;
             margin-bottom: 30px;
             z-index: 3;
             text-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
@@ -117,6 +117,7 @@
             width: 60px;
             height: auto;
             display: block;
+            margin-bottom: 170px;
             filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
             z-index: 6;
         }
@@ -124,11 +125,11 @@
         /* Bottom lace decoration */
         .lace-bottom {
             position: absolute;
-            bottom: 0;
+            margin-top: -300px;
             left: 0;
             width: 100%;
             height: auto;
-            z-index: 4;
+            z-index: 3;
             rotate: 180deg;
         }
 
@@ -212,7 +213,7 @@
             are."
         </div>
 
-        <a href="index.html" class="rabbit-home">
+        <a href="pathway.html" class="rabbit-home">
             <img src="images/rabbit.png" 
                  alt="Home" 
                  class="rabbit-image">
