--- a/curiouser.html
+++ b/curiouser.html
@@ -70,7 +70,7 @@
         /* Border image - REPLACE THIS */
         .lace-border {
             position: absolute;
-            top: 0;
+            margin-top: -180px;
             left: 0;
             width: 100%;
             height: 100%;
@@ -92,17 +92,18 @@
 
         /* Text styling */
         .text-curiouser {
-            font-size: 32px;
+            font-size: 20px;
             font-weight: normal;
             margin-bottom: 5px;
+            margin-top: 80px;
             line-height: 1.2;
         }
 
         .text-and-curiouser {
-            font-size: 28px;
+            font-size: 20px;
             font-weight: normal;
             font-style: italic;
-            margin-bottom: 30px;
+            margin-bottom: 80px;
         }
 
         /* Clocks image container */
@@ -110,6 +111,7 @@
             width: 100%;
             max-width: 200px;
             margin: 20px 0;
+            margin-bottom: -50px;
         }
 
         .clocks-container img {
