--- a/madhatter.html
+++ b/madhatter.html
@@ -128,6 +128,7 @@
             margin-top: -300px;
             left: 0;
             width: 100%;
+            bottom: 0;
             height: auto;
             z-index: 3;
             rotate: 180deg;
