--- a/pathway.html
+++ b/pathway.html
@@ -100,6 +100,10 @@
             margin-top: 50px; 
         }
 
+        .menu-item:nth-child(6) {
+            margin-top: 50px; 
+        }
+
         .menu-item:hover {
             transform: scale(1.1);
             text-shadow: 
